IaC/besteam-iaas/besteam-v1-web-website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: besteam-v1-web-website
  namespace: besteam-iaas
  labels:
    app: besteam-v1-web-website
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
  #  nginx.ingress.kubernetes.io/permanent-redirect: https://www.besteam.io
  #  #nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  rules:
  - host: www.besteam.io
    http:
      paths:
        -  path: /
           pathType: Prefix
           backend:
            service:
              name: besteam-v1-web-website
              port:
                number: 80
  tls:
  - hosts:
    - www.besteam.io
    secretName: tls-besteamio
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: besteam-v1-web-website-redirect
  namespace: besteam-iaas
  labels:
    app: besteam-v1-web-website-redirect
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://www.besteam.io
    #nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  rules:
    - host: besteam.io
  tls:
    - hosts:
      - besteam.io
      secretName: tls-besteamio
